fixes for get involved

--- a/WebApplication3/Views/GetInvolved/GetInvolved.cshtml
+++ b/WebApplication3/Views/GetInvolved/GetInvolved.cshtml
@@ -4,22 +4,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <br />
-<h2 align="middle" style="color:crimson">Get Involved</h2>
+<header>
 
-<div style="height:1px; background-color:crimson;">
+    <h2 align="middle" style="color:crimson">Get Involved</h2>
+</header>
+<body>
+
+        <div style="padding-left:5vw">
+        <p>
+            <br />We are always looking for clinical and non-clinical volunteers who are as passionate about care as we are. If you are interested in serving with us, please click on the appropriate link below. <br />
+            Please note that for clinical volunteers, credentialing takes approximately 30 days to process.
+        </p>
+
+
+        <p><a style="color:crimson" href="~/GetInvolved/NonPhysicianClinicalForm">Non-Physician Clinical Volunteer</a></p>
+
+        <p><a style="color:crimson" href="~/GetInvolved/PhysicianForm">Physician Volunteer</a></p>
+
+        <p><a style="color:crimson" href="~/GetInvolved/GeneralForm">Non-Clinical General (and student) Volunteer</a></p>
+
+        <p><a style="color:crimson" href="~/GetInvolved/MedicalInterpreterVolunteer">Medical Interpreter Volunteer</a></p>
+
+        <p>If you have questions, please email <a href="mailto:volunter@soslouisville.org" style="color:crimson">volunteer@soslouisville.org</a></p>
+
+        <p>Have you recently volunteered with Surgery on Sunday Louisville, Inc. and wish to leave a comment? <a style="color:crimson" href="~/GetInvolved/VolunteerCommentForm"> Click here!</a></p>
 </div>
-<br />
-<p><br />We are always looking for clinical and non-clinical volunteers who are as passionate about care as we are. If you are interested in serving with us, please click on the appropriate link below. Please note that for clinical volunteers, credentialing takes approximately 30 days to process.</p>
+
+</body>
 
 
-<p><a style="color:crimson" href="~/GetInvolved/NonPhysicianClinicalForm">Non-Physician Clinical Volunteer</a></p>
-
-<p><a  style="color:crimson" href="~/GetInvolved/PhysicianForm">Physician Volunteer</a></p>
-
-<p><a style="color:crimson" href="~/GetInvolved/GeneralForm">Non-Clinical General (and student) Volunteer</a></p>
-
-<p><a style="color:crimson" href="~/GetInvolved/MedicalInterpreterVolunteer">Medical Interpreter Volunteer</a></p>
-
-<p>If you have questions, please email <span style="color:crimson">volunteer@soslouisville.org</span></p>
-
-<p>Have you recently volunteered with Surgery on Sunday Louisville, Inc. and wish to leave a comment? <a style="color:crimson" href="~/GetInvolved/VolunteerCommentForm"> Click here!</a></p>
