--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -34,7 +34,6 @@
                         <a href="~/GetInvolved/NonPhysicianClinicalForm">Non-Physician Clinical Volunteer</a>
                         <a href="~/GetInvolved/PhysicianForm">Physician Volunteer</a>
                         <a href="~/GetInvolved/GeneralForm">Non-Clinical General (and Student) Volunteer</a>
-                        <a href="~/GetInvolved/NonPhysicianClinicalForm">Non-Physician Clinical Volunteer</a>
                         <a href="~/GetInvolved/MedicalInterpreterVolunteer">Medical Interpreter Volunteer</a>
                         <a href="~/GetInvolved/VolunteerCommentForm">Volunteer Comment Form</a>
                     </div>
@@ -97,7 +96,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Do You Want Some Candy?</p>
+            <p style="padding-left:5vw">&copy; @DateTime.Now.Year </p>
         </footer>
     </div>
 
