--- a/WebApplication3/Views/GetInvolved/PhysicianForm.cshtml
+++ b/WebApplication3/Views/GetInvolved/PhysicianForm.cshtml
@@ -6,17 +6,17 @@
 <br />
 <h2 style="color:crimson;padding-left:5vw; padding-right:5vw">Physician Volunteer Form</h2>
 
-<link rel="stylesheet" type="text/css" href="~/Content/bootstrap.css">
-<!-- Main form -->
+    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.css">
+    <!-- Main form -->
 
-<div id="account-user-session-container" style="padding-left:5vw; padding-right:5vw">
-    <span class='right-header-link'>
-        <li><a href="/user/sign_in_or_sign_up">Are you a Donor? Sign In</a></li>
-        <li><a href="/user/sign_in_or_sign_up">Create An Account</a></li>
-    </span>
-    <br />
+    <div id="account-user-session-container" style="padding-left:5vw; padding-right:5vw">
+        <span class='right-header-link'>
+            <li><a href="/user/sign_in_or_sign_up">Are you a Donor? Sign In</a></li>
+            <li><a href="/user/sign_in_or_sign_up">Create An Account</a></li>
+        </span>
+        <br />
 
-  
+
     </div>
     <div link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/inputboxes.css" style="padding-left:5vw; padding-right:5vw">
         <label>First Name</label>
@@ -24,7 +24,9 @@
             <div><input required maxlength="50" aria-required="true" size="1000" type="text" /></div>
         </div>
 
-
+        <div id="right" style="float:right; width:50%; position:fixed; top:10vw; right:5vw; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);padding:1vw">
+            Surgery on Sunday Louisville independently credentials each of its physician volunteers following the method developed by The Joint Commission. That process requires us to query physician information through the National Practitioner Database, a service provided by the United States Department of Health and Human Services. Completion of this form serves as the agreement of the volunteer to allow Surgery on Sunday Louisville to perform such query. Questions about this process can be directed to <a href="mailto:info@soslouisville.org">info@soslouisville.org.</a>
+        </div>
 
         <label>Last Name</label>
         <div>
