--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -21,8 +21,8 @@
         <div class="container-fluid" style="
         margin-left:-1vw !important;
         margin-right:-1vw!important;
-        margin-top:-1.28vw!important;
-        padding:0vw !important;
+        margin-top:-1.3vw!important;
+        padding:0 !important;
         max-width:none !important;
         max-height:none !important;
         width:105%;
