--- a/WebApplication3/Views/Home/Staff.cshtml
+++ b/WebApplication3/Views/Home/Staff.cshtml
@@ -6,15 +6,15 @@
 
 <p>
     <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Border.css" />
-    <h1 align="left" style="color:red; padding-left:5vw; padding-right:5vw">
+    <h1 align="left" style="color:crimson; padding-left:5vw; padding-right:5vw">
       <span style="color:black;">
-          <b>Staff</b>
+          <p>Staff</p>
         </span><br /><br />
         Our friendly Surgery on Sunday Louisville, Inc. Staff are dedicated to serving all SOSL patients, volunteers, and partners.<br />
 
     </h1>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div>
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div>
     <br />
 
     <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Rotating pics.css" />
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:30%; float:left">
@@ -61,7 +61,7 @@
         </div>
     </div>
     
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:30%; float:left">
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:30%; float:left">
