--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -126,7 +126,7 @@
 
             </h1>
 
-            <form class="form-style-9">
+            <form class="form-style-9"style="width:700px">
                 <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Form Style.css" />
                 <ul>
                     <li>
