--- a/WebApplication3/Views/Home/BoardOfDirectors.cshtml
+++ b/WebApplication3/Views/Home/BoardOfDirectors.cshtml
@@ -6,7 +6,7 @@
 <p>
     <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Border.css" />
     <span align="left" style="font-size:30px;padding-left:5vw; padding-right:5vw">Board of Directors</span><br /><br />
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
@@ -103,7 +103,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
@@ -119,7 +119,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
@@ -135,7 +135,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
@@ -151,7 +151,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
@@ -167,7 +167,7 @@
         </div>
     </div>
 
-    <br /><div style="height:1px; background-color:black; padding-left:5vw; padding-right:5vw "></div><br />
+    <br /><div style="height:1px; background-color:crimson; padding-left:5vw; padding-right:5vw "></div><br />
 
     <div class="row"style="padding-left:5vw; padding-right:5vw">
         <div style="width:10%; float:left; padding-left:1vw">
