physician form updated

--- a/WebApplication3/Views/GetHelp/GetHelp.cshtml
+++ b/WebApplication3/Views/GetHelp/GetHelp.cshtml
@@ -21,7 +21,7 @@
 }
 
 <p></p>
-<h2><Font color="Red">Surgery on Sunday Louisville, Inc. is here to help!</Font></h2>
+<h2><Font color="red">Surgery on Sunday Louisville, Inc. is here to help!</Font></h2>
 
 <p></p>
 <p></p>
