--- a/WebApplication3/Views/GetInvolved/PhysicianForm.cshtml
+++ b/WebApplication3/Views/GetInvolved/PhysicianForm.cshtml
@@ -157,16 +157,12 @@
 
 
 
-    <div style="padding-left:5vw; padding-right:5vw" class="control-group file optional registration_person_person_document_file" style="padding-left:5vw; padding-right:5vw"><label class="file optional control-label required btn file-btn" for="registration_person_attributes_person_documents_attributes_0_file">Document</label><div class="controls"><input accept="application/pdf,.pdf,.doc,.docx" class="file optional required btn file-btn" id="registration_person_attributes_person_documents_attributes_0_file" name="registration[person_attributes][person_documents_attributes][0][file]" type="file" /></div></div>
+    <div style="padding-left:5vw; padding-right:5vw" class="control-group file optional registration_person_person_document_file"><label class="file optional control-label required btn file-btn" for="registration_person_attributes_person_documents_attributes_0_file">Document</label><div class="controls"><input accept="application/pdf,.pdf,.doc,.docx" class="file optional required btn file-btn" id="registration_person_attributes_person_documents_attributes_0_file" name="registration[person_attributes][person_documents_attributes][0][file]" type="file" /></div></div>
     <input id="registration_person_attributes_person_documents_attributes_0_label" name="registration[person_attributes][person_documents_attributes][0][label]" value="Document" type="hidden" />
 
+<br />
+   <div style="padding-left:5vw; padding-right:5vw"><input type="submit" name="commit" value="Submit" class="btn btn btn-dark btn-lg" data-disable-with="Saving..." /></div>
 
-
-    <div style="padding-left:5vw; padding-right:5vw"><input type="submit" name="commit" value="Submit" class="btn btn btn-dark btn-lg" data-disable-with="Saving..." /></div>
-</div>
-    </div>
-
-   
 
 
 
