--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -36,12 +36,14 @@
                         <a href="~/GetInvolved/GeneralForm">Non-Clinical General (and Student) Volunteer</a>
                         <a href="~/GetInvolved/InterpreterForm">Medical Interpreter Volunteer</a>
                         <a href="~/GetInvolved/VolunteerCommentForm">Volunteer Comment Form</a>
-                    </div>
+                    @*</div>*@
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="~/GetHelp/GetHelp">Get Help</a>
                 <li class="nav-item active">
                     <a class="nav-link" href="~/Account/Login">Login</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="~/Donate">Donate</a>
             </ul>
             <img src="~/Pictures/TwitterJustBird.png" width="35" height="25" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;padding-left:4px" /><img />
             <img src="~/Pictures/FacebookWhite.png" width="30" height="28" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; padding-left:4px" /><img />
