--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="~/Account/Login">Login</a>
                 <li class="nav-item active">
-                    <a class="nav-link" href="~/Donate">Donate</a>
+                    <a class="nav-link" href="~/Donate/Donate">Donate</a>
             </ul>
             <img src="~/Pictures/TwitterJustBird.png" width="35" height="25" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;padding-left:4px" /><img />
             <img src="~/Pictures/FacebookWhite.png" width="30" height="28" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; padding-left:4px" /><img />
