Added patient testimonials

--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <div class="dropdown-content">
                         <a href="~/Home/Staff">Staff</a>
                         <a href="~/Home/BoardOfDirectors">Board of Directors</a>
+                        <a href="~/Home/PatientTestimonial">Patient Testimonials</a>
                     </div>
                 </li>
 
