fixed issue where navbar appeared different on about page

--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -10,7 +10,9 @@
 
 </head>
 <body>
-
+    <link rel="stylesheet" href="~/Content/bootstrapNEW.Min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="~/Content/bootstrap.css">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <img class="navbar-brand" src="~/Pictures/SOS_white_logo.png" width="150" height="60" />
@@ -38,7 +40,7 @@
                         <a href="~/GetInvolved/GeneralForm">Non-Clinical General (and Student) Volunteer</a>
                         <a href="~/GetInvolved/InterpreterForm">Medical Interpreter Volunteer</a>
                         <a href="~/GetInvolved/VolunteerCommentForm">Volunteer Comment Form</a>
-                    @*</div>*@
+                        @*</div>*@
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="~/GetHelp/GetHelp">Get Help</a>
