--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -21,11 +21,12 @@
         <div class="container-fluid" style="
         margin-left:-1vw !important;
         margin-right:-1vw!important;
-        margin-top:-.9vw!important;
+        margin-top:-1.35vw!important;
         padding:0 !important;
         max-width:none !important;
         max-height:none !important;
         width:105%;
+
         
 
 
