--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="~/Content/bootstrap.css">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-        <img class="navbar-brand" src="~/Pictures/SOS_white_logo.png" width="150" height="60" />
+        <img class="navbar-brand" src="~/Pictures/SOS_white_logo.png" width="170" height="80"onclick="window.open('/home')"style="cursor:pointer" />
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
