--- a/WebApplication3/Views/Account/Login.cshtml
+++ b/WebApplication3/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
+                <h4 style="color:crimson">Enter your Admin or returning Volunteer credentials here.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -38,7 +38,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Log in" class="btn btn-default"style="color:white; border:solid; border-color:black; background-color:crimson" />
                     </div>
                 </div>
                 <p>
@@ -48,6 +48,7 @@
                     <p>
                         @Html.ActionLink("Forgot your password?", "ForgotPassword")
                     </p>*@
+
             }
         </section>
     </div>
