--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -26,16 +26,6 @@
         max-width:none !important;
         max-height:none !important;
         width:105%;
-
-        
-
-
-
-        
-
-
-
-
         ">
             <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%">
                 <!-- Indicators -->
@@ -95,11 +85,22 @@
 
             <p>
 
-                <h2 class="w3-center"><b>Come be a part of something truly special!</b></h2>
-                <iframe width="560" height="390" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="float:right;position:relative;"></iframe>
-                <div>
-                    <h3 class="pulsate"><link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/Collage.png" height="400" width="650" /></h3>
+                
+                <br />
+                <div class="row" style="display:flex; justify-content:center">
+                    <div class="column">
+                        <div>
+                            <h3 class="pulsate"><link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/Collage.png" height="400" width="650" /></h3>
 
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h2 align="middle" style="padding-left:5vw; color:crimson"><b>Help us make a difference!</b><br /><br /><span style="color:black">At SOS Louisville,<br />we rely on people's kindness<br />to be able to do what we do!</span> </h2>
+
+                    </div>
+                    <div class="column" style="padding-left:10vw">
+                        <iframe width="560" height="390" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="float:right;position:relative;"></iframe>
+                    </div>
                 </div>
 
 
@@ -108,8 +109,9 @@
 
 
 
+
                 <br /><div style="height:1px; background-color:Crimson; padding-left:5vw; padding-right:5vw "></div><br />
-<p>
+            <p>
 
             </p><br />
 
@@ -127,7 +129,7 @@
 
             </h1>
 
-            <form class="form-style-9"style="width:700px">
+            <form class="form-style-9" style="width:700px">
                 <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Form Style.css" />
                 <ul>
                     <li>
@@ -146,7 +148,7 @@
                     </li>
                 </ul>
             </form>
-            
+
 
             <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
             <p>
@@ -160,26 +162,28 @@
 
 
                 <br /><br /> <section>
-                                 <div style="display:flex; justify-content:center;">
-                                     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="485" style="border:none;overflow:hidden; float:left " scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
-                                     <div style="position:relative;padding-left:3vw;">
-                                         <a class="twitter-timeline" style="float:right;" data-width="340" data-height="500" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
-                                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                                     </div>
-                                     <!-- InstaWidget -->
-                                     <!-- InstaWidget -->
-                                     <!-- InstaWidget -->
-                                     <div style="padding-left:3vw">
-                                         <a href="https://instawidget.net/v/user/SOSLouisville" id="link-2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa">soslouisville</a>
-                                         <script src="https://instawidget.net/js/instawidget.js?u=2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa&width=300px"></script>
-                                     </div>
-                                 </div>
+                    <div style="display:flex; justify-content:center;">
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSurgeryonSundayLouisville%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="485" style="border:none;overflow:hidden; float:left " scrolling="no" frameborder="0" allowTransparency="true"></iframe> <!--change position for widget using position:fixed-->
+                        <div style="position:relative;padding-left:3vw;">
+                            <a class="twitter-timeline" style="float:right;" data-width="340" data-height="500" href="https://twitter.com/soslouisville?ref_src=twsrc%5Etfw">Tweets by soslouisville</a>
+                            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <!-- InstaWidget -->
+                        <!-- InstaWidget -->
+                        <!-- InstaWidget -->
+                        <div style="padding-left:3vw">
+                            <a href="https://instawidget.net/v/user/SOSLouisville" id="link-2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa">soslouisville</a>
+                            <script src="https://instawidget.net/js/instawidget.js?u=2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa&width=300px"></script>
+                        </div>
+                    </div>
 
                 </section>
 
 
 
+
             </p>
+            
 
         </body>
 
