--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -87,10 +87,10 @@
 
                 
                 <br />
-                <div class="row" style="display:flex; justify-content:center">
-                    <div class="column">
+                <div class="row" style="display:flex; justify-content:center; margin:0">
+                    <div class="column"style="padding-left:-10vw">
                         <div>
-                            <h3 class="pulsate"><link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/Collage.png" height="400" width="650" /></h3>
+                            <h3 class="pulsate"><link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/CollageUse.png" height="400" width="450" /></h3>
 
                         </div>
                     </div>
@@ -99,7 +99,7 @@
 
                     </div>
                     <div class="column" style="padding-left:10vw">
-                        <iframe width="560" height="390" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="float:right;position:relative;"></iframe>
+                        <iframe width="400" height="390" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="float:right;position:relative;"></iframe>
                     </div>
                 </div>
 
