--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -88,7 +88,7 @@
                 
                 <br />
                 <div class="row" style="display:flex; justify-content:center; margin:0">
-                    <div class="column"style="padding-left:-10vw">
+                    <div class="column">
                         <div>
                             <h3 class="pulsate"><link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/CollageUse.png" height="400" width="450" /></h3>
 
@@ -98,7 +98,7 @@
                         <h2 align="middle" style="padding-left:5vw; color:crimson"><b>Help us make a difference!</b><br /><br /><span style="color:black">At SOS Louisville,<br />we rely on people's kindness<br />to be able to do what we do!</span> </h2>
 
                     </div>
-                    <div class="column" style="padding-left:10vw">
+                    <div class="column" style="padding-left:6vw">
                         <iframe width="400" height="390" src="https://www.youtube.com/embed/oePBye4vrnA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="float:right;position:relative;"></iframe>
                     </div>
                 </div>
