Updated links (links without pages still do not work)

--- a/WebApplication3/Custom_CSS_Styles/Footer.css
+++ b/WebApplication3/Custom_CSS_Styles/Footer.css
@@ -21,7 +21,7 @@
 }
 
 #site-footer a:hover {
-    color: #C41E3A;
+    color: #BD2031;
 }
 
 #site-footer a:active {
@@ -80,3 +80,4 @@
 #social-media-footer li {
     padding-bottom: 26px;
 }
+
