--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
                         <ul class="footer-ul">
                             <li id="contact-address-li">PO Box 4757 <br />Louisville, KY 40204</li>
                             <li id="contact-number-li"><p>502-242-2089</p></li>
-                            <li id="contact-email-li"><p>info@soslouisville.org</p></li>
+                            <li id="contact-email-li"><p><a href="mailto:info@soslouisville.org">info@soslouisville.org</a></p></li>
                             <li id="contact-times-li"><p>Monday-Friday, 8AM-5PM</p></li>
                         </ul>
                     </div>
@@ -159,13 +159,13 @@
                 <div class="footer-card card">
                     <div class="card-block">
                         <h4 class="card-title">Site Map</h4>
-                        <p class="card-text"><a href="">Home</a></p>
-                        <p class="card-text"><a href="">About Us</a></p>
-                        <p class="card-text"><a href="">Get Help</a></p>
-                        <p class="card-text"><a href="">Get Involved</a></p>
+                        <p class="card-text"><a href="~/Home">Home</a></p>
+                        <p class="card-text"><a href="~/Home/About">About Us</a></p>
+                        <p class="card-text"><a href="~/GetHelp/GetHelp">Get Help</a></p>
+                        <p class="card-text"><a href="~/GetInvolved/GetInvolved">Get Involved</a></p>
                         <p class="card-text"><a href="">Patient Referral</a></p>
                         <p class="card-text"><a href="">Events</a></p>
-                        <p class="card-text"><a href="">Donate</a></p>
+                        <p class="card-text"><a href="~/Donate/Donate">Donate</a></p>
                     </div>
                 </div>
             </div>
