Changed GetHelp page to have crimson and added an event creator page and linked it to the login page.

--- a/WebApplication3/Views/Account/Login.cshtml
+++ b/WebApplication3/Views/Account/Login.cshtml
@@ -59,6 +59,8 @@
     </div>
 </div>
 
+<p><a href="~/EventCreator/EventCreator"><font color="Crimson">Create an Event</font></a></p>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
