--- a/WebApplication3/Views/GetHelp/GetHelp.cshtml
+++ b/WebApplication3/Views/GetHelp/GetHelp.cshtml
@@ -21,7 +21,7 @@
 }
 
 <p></p>
-<h2><Font color="red">Surgery on Sunday Louisville, Inc. is here to help!</Font></h2>
+<h2><Font color="Crimson">Surgery on Sunday Louisville, Inc. is here to help!</Font></h2>
 
 <p></p>
 <p></p>
@@ -34,9 +34,9 @@
 <p>All SOSL patients must have a primary care medical home. If you do not have a medical home, please 
     contact one of our partner clinics listed below. You may qualify for free or sliding-fee-scale care.</p>
 
-<p>Additionally, all patients must meet our <a href="~/Content/SOSL-Eligability-Criteria-Criteria-Only-W-2.pdf"><Font color="Red">Eligibility Criteria</Font></a>.</p> 
+<p>Additionally, all patients must meet our <a href="~/Content/SOSL-Eligability-Criteria-Criteria-Only-W-2.pdf"><Font color="Crimson">Eligibility Criteria</Font></a>.</p> 
 
-<h3> <Font color="Red">Partner Clinics</Font> </h3>
+<h3> <Font color="Crimson">Partner Clinics</Font> </h3>
 
 <p>Surgery on Sunday Louisville, Inc. (SOSL) partners with several clinics in the Greater Louisville 
     area to ensure that our patients have access to quality care. All SOSL patients are required to have 
@@ -47,23 +47,23 @@
 
 <p class="InLineHeader">Louisville, KY</p>
 <ul style="list-style-type:none">
-    <li> <a href="http://famcomclinic.org"><font color="Red">Family Community Clinic</font></a> </li>
-    <li> <a href="http://www.fhclouisville.org"><font color="Red">Family Family Health Centers Louisville</font></a> </li>
-    <li> <a href="http://www.pdchc.org"><font color="Red">Park Duvalle Community Health Center</font></a> </li>
-    <li> <a href="http://shawneechristianhealthcare.org"><font color="Red">Shawnee Christian Healthcare Center</font></a> </li>
+    <li> <a href="http://famcomclinic.org"><font color="Crimson">Family Community Clinic</font></a> </li>
+    <li> <a href="http://www.fhclouisville.org"><font color="Crimson">Family Family Health Centers Louisville</font></a> </li>
+    <li> <a href="http://www.pdchc.org"><font color="Crimson">Park Duvalle Community Health Center</font></a> </li>
+    <li> <a href="http://shawneechristianhealthcare.org"><font color="Crimson">Shawnee Christian Healthcare Center</font></a> </li>
 </ul>
 
 <p class="InLineHeader">LaGrange, KY</p>
 <ul style="list-style-type:none">
-    <li> <a href="https://hopehealthclinicky.com"><font color="Red">Hope Health Clinic</font></a> </li>
+    <li> <a href="https://hopehealthclinicky.com"><font color="Crimson">Hope Health Clinic</font></a> </li>
 </ul>
 
 <p class="InLineHeader">Shelbyville, KY</p>
 <ul style="list-style-type:none">
-    <li> <a href="https://www.freeclinics.com/det/ky-mercy_medical_clinic_shelbyville"><font color="Red">Mercy Medical Clinic</font></a> </li>
+    <li> <a href="https://www.freeclinics.com/det/ky-mercy_medical_clinic_shelbyville"><font color="Crimson">Mercy Medical Clinic</font></a> </li>
 </ul>
 
 <p class="InLineHeader">Southern Indiana</p>
 <ul style="list-style-type:none">
-    <li> <a href="http://fhcenters.org"><font color="Red">Family Health Centers of Southern Indiana</font></a> </li>
+    <li> <a href="http://fhcenters.org"><font color="Crimson">Family Health Centers of Southern Indiana</font></a> </li>
 </ul>
