--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -119,7 +119,7 @@
 
 
                 <span style="color:red; font-size:32px">Surgery On Sunday – Louisville, Inc.</span><span style="font-size:20px"> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.</span>  <span style="color:red; font-size:25px"><b> Our patients never see a bill.</b></span> <span style="font-size:20px"> are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.</span>
-                <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
+               <br /><br /> <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
             </p>
 
             <h1>
