--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="~/Content/bootstrap.css">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger"style="font-size:20px">
         <img class="navbar-brand" src="~/Pictures/SOS_white_logo.png" width="170" height="80"onclick="window.location.href='/Home'"style="cursor:pointer" />
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,6 +48,11 @@
                     <a class="nav-link" href="~/Account/Login">Login</a>
                 <li class="nav-item active">
                     <a class="nav-link" href="~/Donate/Donate">Donate</a>
+                <li class="dropdown">
+                    <a class="nav-link"style="color:white" href="~/PatientReferral/PatientReferral">Refer a Patient</a>
+                    <div class="dropdown-content">
+                        <a href="~/PatientReferral/PatientReferralPasswordPage">Get Started</a>
+                    </div>
             </ul>
             <img src="~/Pictures/TwitterJustBird.png" width="35" height="25" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;padding-left:4px" /><img />
             <img src="~/Pictures/FacebookWhite.png" width="30" height="28" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; padding-left:4px" /><img />
