Slight visual changes to patientreferralpasswordpage

--- a/WebApplication3/Views/PatientReferral/PatientReferralPasswordPage.cshtml
+++ b/WebApplication3/Views/PatientReferral/PatientReferralPasswordPage.cshtml
@@ -11,15 +11,14 @@
     <meta charset="UTF-8" />
 </head>
 <body>
-    <div style="text-align: justify";>
+    <div style="text-align: justify; padding-left:5vw">
         </br>
         </br>
 
-        <h5>PROTECTED: REFER A PATIENT</h5>
+        <h2 style="color: crimson">PROTECTED: REFER A PATIENT</h2>
 
         <p>This content is password protected. To view it please enter your password below:</p>
 
-        </br>
         </br>
         <form>
             <form>
