--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -29,51 +29,52 @@
         ">
             <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%">
                 <!-- Indicators -->
-    <ol class="carousel-indicators" align="middle">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+                <div class="carousel-caption" style="padding-bottom:12vw; text-shadow: 2px 2px crimson;"><h1><b>Explore SOS Louisville</b><br /><img src="~/Pictures/triangle-down-arrow-icon-65007.png"style="height:40px; width:40px" /></h1></div>
+                <ol class="carousel-indicators" align="middle">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
 
-        <div class="item active">
-            <img src="~/Pictures/SOS Collage.jpg" alt="Los Angeles" style="width:100%;">
-            <div class="carousel-caption">
-                <h3>We're here for YOU</h3>
+                    <div class="item active">
+                        <img src="~/Pictures/SOS Collage.jpg" alt="Los Angeles" style="width:100%;">
+                        <div class="carousel-caption">
+                            <h3>We're here for YOU</h3>
 
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="~/Pictures/SOSShirtPicUse.png" alt="Chicago" style="width:100%; height:100%">
+                        <div class="carousel-caption">
+                            <h3>Our patients NEVER see a bill</h3>
+
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="~/Pictures/SOS Pic.jpg" alt="New York" style="width:100%;">
+                        <div class="carousel-caption">
+                            <h3>Join us as we make our area a better place!</h3>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-        </div>
-
-        <div class="item">
-            <img src="~/Pictures/SOSShirtPicUse.png" alt="Chicago" style="width:100%; height:100%">
-            <div class="carousel-caption">
-                <h3>Our patients NEVER see a bill</h3>
-
-            </div>
-        </div>
-
-        <div class="item">
-            <img src="~/Pictures/SOS Pic.jpg" alt="New York" style="width:100%;">
-            <div class="carousel-caption">
-                <h3>Join us as we make our area a better place!</h3>
-
-            </div>
-        </div>
-
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-    </a>
-    </div>
     </div>
 
 
