--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -29,7 +29,7 @@
         ">
             <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%">
                 <!-- Indicators -->
-                <div class="carousel-caption" style="padding-bottom:12vw; text-shadow: 2px 2px crimson;"><h1><b>Explore SOS Louisville</b><br /><img src="~/Pictures/triangle-down-arrow-icon-65007.png"style="height:40px; width:40px" /></h1></div>
+                <div class="carousel-caption" style="padding-bottom:12vw; text-shadow: 2px 2px crimson;"><h1 style="font-size:50px; color:white"><b>Explore SOS Louisville</b><br /><img src="~/Pictures/triangle-down-arrow-icon-65007.png"style="height:40px; width:60px;" /></h1></div>
                 <ol class="carousel-indicators" align="middle">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                     <li data-target="#myCarousel" data-slide-to="1"></li>
