--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -138,22 +138,22 @@
                         <ul class="footer-ul" id="social-media-footer">
                             <li>
                                 <a href="https://www.facebook.com/SurgeryonSundayLouisville" target="_blank">
-                                    <img src="~/Pictures/Footer-Icons/facebook-icon.png" alt="Facebook icon." />
+                                    <img src="~/Pictures/facebook-icon.png" alt="Facebook icon." />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/soslouisville" target="_blank">
-                                    <img src="~/Pictures/Footer-Icons/twitter-icon.png" alt="Twitter icon." />
+                                    <img src="~/Pictures/twitter-icon.png" alt="Twitter icon." />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/SOSLouisville/" target="_blank">
-                                    <img src="~/Pictures/Footer-Icons/instagram-icon.png" alt="Instagram icon." />
+                                    <img src="~/Pictures/instagram-icon.png" alt="Instagram icon." />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.youtube.com/channel/UCi8B7g8j_fs-4UFcSPf2xXg//" target="_blank">
-                                    <img src="~/Pictures/Footer-Icons/youtube-icon.png" alt="Youtube icon." />
+                                    <img src="~/Pictures/youtube-icon.png" alt="Youtube icon." />
                                 </a>
                             </li>
                         </ul>
@@ -168,7 +168,7 @@
                         <p class="card-text"><a href="~/Home/About">About Us</a></p>
                         <p class="card-text"><a href="~/GetHelp/GetHelp">Get Help</a></p>
                         <p class="card-text"><a href="~/GetInvolved/GetInvolved">Get Involved</a></p>
-                        <p class="card-text"><a href="">Patient Referral</a></p>
+                        <p class="card-text"><a href="~/PatientReferral/PatientReferral">Patient Referral</a></p>
                         <p class="card-text"><a href="">Events</a></p>
                         <p class="card-text"><a href="~/Donate/Donate">Donate</a></p>
                     </div>
