--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -48,6 +48,10 @@
                     <a class="nav-link" href="~/Account/Login">Login</a>
                 <li class="nav-item active">
                     <a class="nav-link" href="~/Donate/Donate">Donate</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="~/Donate/Donate">Donate</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="~/ContactUs/ContactUs">Contact Us</a>
             </ul>
             <img src="~/Pictures/TwitterJustBird.png" width="35" height="25" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;padding-left:4px" /><img />
             <img src="~/Pictures/FacebookWhite.png" width="30" height="28" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; padding-left:4px" /><img />
@@ -165,6 +169,7 @@
                         <p class="card-text"><a href="~/GetInvolved/GetInvolved">Get Involved</a></p>
                         <p class="card-text"><a href="">Patient Referral</a></p>
                         <p class="card-text"><a href="">Events</a></p>
+                        <p class="card-text"><a href="~/ContactUs/ContactUs">Contact Us Form</a></p>
                         <p class="card-text"><a href="~/Donate/Donate">Donate</a></p>
                     </div>
                 </div>
