--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -122,7 +122,7 @@
         <br /><br /> <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
     </p>
 
-    <h1 style="display: flex; justify-content: center;text-shadow: 1px 2px black; color:crimson;font-size:40px;">
+    <h1 style="display: flex; justify-content: center;text-shadow: 1px 2px black; color:crimson;font-size:40px;font-weight:400">
         <b>Check us out on Social Media!</b>
 
     </h1>
@@ -142,7 +142,7 @@
         </div>
     </div>
    <br /><br /> <div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
-    <div style="display: flex; justify-content: center;text-shadow: 1px 2px black;color:crimson;font-size:40px">
+    <div style="display: flex; justify-content: center;text-shadow: 1px 2px black;color:crimson;font-size:40px;font-weight:400">
         <b> Subscribe to our quarterly mailing list:</b><br />
     </div>
 
