--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -28,7 +28,7 @@
         ">
     <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%">
         <!-- Indicators -->
-        <div class="carousel-caption" style="padding-bottom:8vw; text-shadow: 2px 2px crimson;"><h1><b>Explore SOS Louisville</b><br /><img src="~/Pictures/triangle-down-arrow-icon-65007.png" style="height:40px; width:40px" /></h1></div>
+        <div class="carousel-caption" style="padding-bottom:14vw; text-shadow: 2px 2px crimson;"><h1><b>Explore SOS Louisville</b><br /><img src="~/Pictures/triangle-down-arrow-icon-65007.png" style="height:40px; width:40px" /></h1></div>
         <ol class="carousel-indicators" align="middle">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -121,7 +121,36 @@
         <span style="color:red; font-size:32px;text-shadow: 1px 1px black;">Surgery On Sunday – Louisville, Inc.</span><span style="font-size:20px"> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.</span>  <span style="color:red; font-size:25px;text-shadow: 1px 1px black;"><b> Our patients never see a bill.</b></span> <span style="font-size:20px"> are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.</span>
         <br /><br /> <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
     </p>
+    <h1 style="text-shadow: 1px 2px black;color:crimson;font-size:40px;font-weight:400"><b>We Care Since 2005</b></h1>
 
+    <div class="wrapper">
+        <div class="counter col_fourth">
+            <i class="fa fa-code fa-2x"></i>
+            <h2 class="timer count-title count-number" data-to="300" data-speed="3000"></h2>
+            <p class="count-text ">Patients Helped</p>
+        </div>
+
+        <div class="counter col_fourth">
+            <i class="fa fa-coffee fa-2x"></i>
+            <h2 class="timer count-title count-number" data-to="50" data-speed="3000"></h2>
+            <p class="count-text ">Total Volunteers</p>
+        </div>
+
+        <div class="counter col_fourth">
+            <i class="fa fa-lightbulb-o fa-2x"></i>
+            <h2 class="timer count-title count-number" data-to="163000" data-speed="3000"></h2>
+            <p class="count-text ">Dollars Raised</p>
+        </div>
+
+        <div class="counter col_fourth end">
+            <i class="fa fa-bug fa-2x"></i>
+            <h2 class="timer count-title count-number" data-to="10000" data-speed="3000"></h2>
+            <p class="count-text ">Hours Served</p>
+        </div>
+    </div><br /><br />
+    
+    <br /><div style="height:1px; background-color:Crimson; padding-left:5vw; padding-right:5vw "></div><br />
+    
     <h1 style="display: flex; justify-content: center;text-shadow: 1px 2px black; color:crimson;font-size:40px;font-weight:400">
         <b>Check us out on Social Media!</b>
 
@@ -141,7 +170,7 @@
             <script src="https://instawidget.net/js/instawidget.js?u=2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa&width=300px"></script>
         </div>
     </div>
-   <br /><br /> <div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
+    <br /><br /> <div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
     <div style="display: flex; justify-content: center;text-shadow: 1px 2px black;color:crimson;font-size:40px;font-weight:400">
         <b> Subscribe to our quarterly mailing list:</b><br />
     </div>
@@ -173,35 +202,6 @@
     <link href="~/Custom_CSS_Styles/CounterWidget.css" rel="stylesheet">
 
 
-
-
-    <h1>JQUERY NUMBER ANIMATION</h1>
-
-    <div class="wrapper">
-        <div class="counter col_fourth">
-            <i class="fa fa-code fa-2x"></i>
-            <h2 class="timer count-title count-number" data-to="300" data-speed="1500"></h2>
-            <p class="count-text ">SomeText GoesHere</p>
-        </div>
-
-        <div class="counter col_fourth">
-            <i class="fa fa-coffee fa-2x"></i>
-            <h2 class="timer count-title count-number" data-to="1700" data-speed="1500"></h2>
-            <p class="count-text ">SomeText GoesHere</p>
-        </div>
-
-        <div class="counter col_fourth">
-            <i class="fa fa-lightbulb-o fa-2x"></i>
-            <h2 class="timer count-title count-number" data-to="11900" data-speed="1500"></h2>
-            <p class="count-text ">SomeText GoesHere</p>
-        </div>
-
-        <div class="counter col_fourth end">
-            <i class="fa fa-bug fa-2x"></i>
-            <h2 class="timer count-title count-number" data-to="157" data-speed="1500"></h2>
-            <p class="count-text ">SomeText GoesHere</p>
-        </div>
-    </div>
     <script>
         (function ($) {
             $.fn.countTo = function (options) {
@@ -271,7 +271,7 @@
             $.fn.countTo.defaults = {
                 from: 0,               // the number the element should start at
                 to: 0,                 // the number the element should end at
-                speed: 1000,           // how long it should take to count between the target numbers
+                speed: 5,           // how long it should take to count between the target numbers
                 refreshInterval: 100,  // how often the element should be updated
                 decimals: 0,           // the number of decimal places to show
                 formatter: formatter,  // handler for formatting the value before rendering
