--- a/WebApplication3/Views/GetHelp/GetHelp.cshtml
+++ b/WebApplication3/Views/GetHelp/GetHelp.cshtml
@@ -21,11 +21,11 @@
 }
 
 <p></p>
-<h2><Font color="Crimson">Surgery on Sunday Louisville, Inc. is here to help!</Font></h2>
+<h2 style="padding-left:5vw; padding-right:5vw"><Font color="Crimson">Surgery on Sunday Louisville, Inc. is here to help!</Font></h2>
 
 <p></p>
 <p></p>
-
+<div style="padding-left:5vw; padding-right:5vw">
 <p class="InLineHeader">SOSL accepts patient referrals from any primary care medical home.</p>
 
 <p>If you are a patient in need of outpatient surgical or endoscopic procedures, please ask your primary 
@@ -67,3 +67,4 @@
 <ul style="list-style-type:none">
     <li> <a href="http://fhcenters.org"><font color="Crimson">Family Health Centers of Southern Indiana</font></a> </li>
 </ul>
+    </div>
