--- a/WebApplication3/Views/Home/PatientTestimonial.cshtml
+++ b/WebApplication3/Views/Home/PatientTestimonial.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <body>
-    <h2 style="padding-left:3vw">Patient Testimonials</h2><br />
-    <div style="padding-left:6vw">
+    <h2 style="padding-left:5vw"><b>Patient Testimonials</b></h2><br />
+    <div style="padding-left:5vw">
         
         <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FChanelleHelm%2Fposts%2F10100305166512761%3A0&width=500" width="500" height="335" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
         <br />
