--- a/WebApplication3/Views/Home/Staff.cshtml
+++ b/WebApplication3/Views/Home/Staff.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Border.css" />
     <h1 align="left" style="color:crimson; padding-left:5vw; padding-right:5vw">
       <span style="color:black;">
-          <p>Staff</p>
+          <p><b>Staff</b></p>
         </span><br /><br />
         Our friendly Surgery on Sunday Louisville, Inc. Staff are dedicated to serving all SOSL patients, volunteers, and partners.<br />
 
