--- a/WebApplication3/Views/Account/Login.cshtml
+++ b/WebApplication3/Views/Account/Login.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2 style="padding-left:5vw; padding-right:5vw">@ViewBag.Title.</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4 style="color:crimson">Enter your Admin or returning Volunteer credentials here.</h4>
+                <h4 style="color:crimson; padding-left:5vw; padding-right:5vw">Enter your Admin or returning Volunteer credentials here.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -41,7 +41,7 @@
                         <input type="submit" value="Log in" class="btn btn-default"style="color:white; border:solid; border-color:black; background-color:crimson" />
                     </div>
                 </div>
-                <p>
+                <p style="color:crimson; padding-left:5vw; padding-right:5vw">
                     @Html.ActionLink("Register as a new user", "Register")
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
@@ -59,7 +59,7 @@
     </div>
 </div>
 
-<p><a href="~/EventCreator/EventCreator"><font color="Crimson">Create an Event</font></a></p>
+<p><a href="~/EventCreator/EventCreator"><font color="Crimson" style="padding-left:5vw; padding-right:5vw">Create an Event</font></a></p>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
